--- a/myriam-gentile---pedagogista-&-consulente OFFICIAL v1.1/index.html
+++ b/myriam-gentile---pedagogista-&-consulente OFFICIAL v1.1/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Myriam Gentile | Pedagogista a Civitanova Marche | Consulenza, Blog e FAQ</title>
     <meta name="description" content="Myriam Gentile, Pedagogista a Civitanova Marche. Esplora il blog 'Spazio Pedagogico', consulta le FAQ su pedagogia e DSA, e richiedi consulenza genitoriale o tutoraggio." />
-    <link rel="canonical" href="https://www.myriamgentile.it" />
+    <link rel="canonical" href="https://www.myriamgentilepedagogista.com" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
