--- a/myriam-gentile---pedagogista-&-consulente OFFICIAL v2.0/index.html
+++ b/myriam-gentile---pedagogista-&-consulente OFFICIAL v2.0/index.html
@@ -1,9 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="it" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://i.imgur.com/6OPo7If.png" />
+    <link rel="apple-touch-icon" href="https://i.imgur.com/6OPo7If.png" />
+    
     <!-- Dynamic SEO managed via components/SEO.tsx -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,7 +94,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "path": "https://esm.sh/path@^0.12.7",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
