--- a/myriam-gentile---pedagogista-&-consulente OFFICIAL v2.0/index.html
+++ b/myriam-gentile---pedagogista-&-consulente OFFICIAL v2.0/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://i.imgur.com/6OPo7If.png" />
-    <link rel="apple-touch-icon" href="https://i.imgur.com/6OPo7If.png" />
+   <link rel="icon" href="/favicon.ico" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     
     <!-- Dynamic SEO managed via components/SEO.tsx -->
     <script src="https://cdn.tailwindcss.com"></script>
